@@ -138,6 +138,7 @@ $settings = array(
 		'external-tools' => array(
 			'wgDiff' => 'text',
 			'wgDiff3' => 'text',
+			'wgNullFile' => 'text',
 			'wgPhpCli' => 'text',
 			'wgTexvc' => 'text',
 			'wgExternalDiffEngine' => 'text',
@@ -839,6 +840,7 @@ $arrayDefs = array(
 $emptyValues = array(
 	'wgAppleTouchIcon' => false,
 	'wgVariantArticlePath' => false,
+	'wgNullFile' => false,
 	'wgDBerrorLog' => null,
 	'wgSearchType' => null,
 	'wgSharedDB' => null,
@@ -888,6 +890,7 @@ $editRestricted = array(
 	'wgDiff3',
 	'wgFavicon',
 	'wgLogo',
+	'wgNullFile',
 	'wgMathDirectory',
 	'wgMathPath',
 	'wgProto',
@@ -1089,6 +1092,7 @@ $settingsVersion = array(
 	'wgImageMagickTempDir' => array( array( '1.14alpha', '>=' ) ),
 	'wgNamespacesToBeSearchedProject' => array( array( '1.14alpha', '>=' ) ),
 	'wgUsePrivateIPs' => array( array( '1.14alpha', '>=' ) ),
+	'wgNullFile' => array( array( '1.14alpha', '>=' ) ),
 # Obsolete
 	'wgAjaxSearch' => array( array( '1.14alpha', '<' ) ),
 );
